--- a/client/spm/src/playlist/Playlist.css
+++ b/client/spm/src/playlist/Playlist.css
@@ -1,7 +1,20 @@
-.playlist {
+.playlist-wrapper {
     height: 100vh;
     overflow-y: scroll;
     overflow: auto;
+}
+
+.playlist {
+    margin: 10px;
+}
+
+ul.flex-list {
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    -webkit-padding-start: 0;
     display: flex;
-    padding: 0;
+    flex-direction: column;
+    justify-content: space-between;
 }
