--- a/client/spm/src/sidebar/Sidebar.css
+++ b/client/spm/src/sidebar/Sidebar.css
@@ -1,5 +1,10 @@
 ul {
     list-style-type: none;
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    -webkit-padding-start: 0;
 }
 
 .sidebar {
